Bdd + Routing
