# src/Application/Service/MakeContext/MakeContextResponse.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace Chatbot\Application\Service\MakeContext;
+
+use Chatbot\Domain\Model\Context\ContextId;
+
+class MakeContextResponse
+{
+    public function __construct(
+        public readonly ContextId $contextId,
+    ) {
+    }
+}
