# src/Domain/Model/Context/ContextMessage.php
@@ -4,8 +4,8 @@ namespace Chatbot\Domain\Model\Context;
 
 use Chatbot\Domain\Model\Conversation\TokenCount;
 
-class ContextMessage{
-
+class ContextMessage
+{
     public function __construct(public readonly string $context)
     {
     }
@@ -16,13 +16,9 @@ class ContextMessage{
         $result = $tokenCount->countToken($this->context);
         return $result;
     }
-    
+
     public function getMessage(): string
     {
         return $this->context;
     }
-
 }
-
-
-
